<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    android:gravity="top"
    android:orientation="vertical">


<!--    <include-->
<!--        android:id="@+id/toolbar"-->
<!--        layout="@layout/toolbar" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/radius_register">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="돌아오신 것을"
                android:textStyle="bold"
                android:textSize="40dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="환영합니다"
                android:textStyle="bold"
                android:textSize="40dp"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textCapWords"

                android:backgroundTint="@color/black"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint">

            </EditText>

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"

                android:backgroundTint="@color/black"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint">

            </EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="60dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_btn_darkblue"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <Button
                android:id="@+id/login_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_btn_darkblue"
                android:text="비밀번호 재설정"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:paddingRight="20dp"
                android:text="계정이 없으신가요?"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:id="@+id/lgn_to_rgt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="회원가입"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>